finish main function of game logic, win message, tie, and reset button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="player-inputs">
+        <div>
+            <label for="player1-name">Player 1 Name:</label>
+            <input type="text" id="player1-name">
+            <label for="player1-symbol">Player 1 Symbol:</label>
+            <select id="symbol" name = 'symbol'>
+        </div>
+        <div>
+            <label for="player2-name">Player 2 Name:</label>
+            <input type="text" id="player2-name">
+            <label for="player2-symbol">Player 2 Symbol:</label>
+            <input type="text" id="player2-symbol">
+        </div>
+    </div>
     <div class="game-board"></div>
     <script src ="script.js"></script>
 </body>
