--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
             <label for="player1-name">Player 1 Name:</label>
             <input type="text" id="player1-name">
             <label for="player1-symbol">Player 1 Symbol:</label>
-            <select id="symbol" name = 'symbol'>
+            <select id="symbol1" name = 'symbol'>
+                <option value = "X">X</option>
+                <option value = "O">O</option>
+            </select>
         </div>
         <div>
             <label for="player2-name">Player 2 Name:</label>
             <input type="text" id="player2-name">
             <label for="player2-symbol">Player 2 Symbol:</label>
-            <input type="text" id="player2-symbol">
+            <select id="symbol2" name = 'symbol'>
+                <option value = "X">X</option>
+                <option value = "O">O</option>
+            </select>
         </div>
+        <button id="start-game">Start Game</button>
     </div>
     <div class="game-board"></div>
     <script src ="script.js"></script>
